--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,55 @@
+:root {
+    --primary-color: #2F303A; /* Основний колір */
+    --secondary-color: #757575; /* Додатковий колір */
+    --background-color: #F5F4FA; /* Колір фону */
+    --text-color: white; /* Основний колір тексту */
+    --accent-color: #2196F3; /* Акцентний колір */
+}
 header{
-    background-color: white;
+    background-color: var(--background-color);
 }
 .section1{
-    background-color: #2F303A;
+    background-color: var(--primary-color);
 }
 .number1{
-    color: #757575;
+    color: var(--secondary-color);
 }
 .email1{
-    color: #2196F3;
+    color: var(--accent-color);
 }
 h1{
-    color: white;
+    color: var(--text-color);
 }
 .button1{
-    color: white;
-    background-color: #2196F3;
+    color: var(--text-color);
+    background-color: var(--accent-color);
 }
 .section2{
-    background-color: white;
+    background-color: var(--text-color);
 }
 .section3{
-    background-color: white;
+    background-color: var(--text-color);
 }
 .section4{
-    background-color: #F5F4FA;
+    background-color: var(--background-color);
 }
 footer{
-    background-color: #2F303A;
+    background-color: var(--primary-color);
 }
 .a1portf{
-    background-color: #F5F4FA;
+    background-color: var(--background-color);
 }
 .a2portf{
-    background-color: #F5F4FA;
+    background-color: var(--background-color);
 }
 .a3portf{
-    background-color: #F5F4FA;
+    background-color: var(--background-color);
 }
 .a4portf{
-    background-color: #F5F4FA;
+    background-color: var(--background-color);
 }
 .a5portf{
-    background-color: #F5F4FA;
+    background-color: var(--background-color);
 }
 .fig0{
     border: solid;
