--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ body{
 
 .section1 h1{
     font-weight: 900px;
+    line-height: 1.4px;
 }
 
 .section2 p{
@@ -139,3 +140,42 @@ body{
     line-height: 1.2px;
 }
 
+.section1 button{
+    font-weight: 700;
+    line-height: 0.5px;
+}
+
+.section3 img{
+    font-weight: 700;
+    line-height: 1.2px;
+}
+
+.section4 h2{
+    font-weight: 700;
+    line-height: 1.2px;
+}
+
+.section4 h4{
+    font-weight: 400;
+    line-height: 1.2px;
+}
+
+.section4 p{
+    font-weight: 500;
+    line-height: 1.2px;
+}
+
+.portfolio-nav button{
+    font-weight: 500;
+    line-height: 1.6px;
+}
+
+.choose h4{
+    font-weight: 700;
+    line-height: 2px;
+}
+
+.choose p{
+    font-weight: 400;
+    line-height: 1.9px;
+}
