--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@
     --text-color: white; 
     --accent-color: #2196F3; 
 }
+
+.container{
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    outline: 2px dashed red
+}
+
 header{
     background-color: var(--background-color);
 }
@@ -269,4 +278,24 @@ a:hover{
     font-size: 16px;
     background-color: #F5F4FA;
     border: none;
+}
+
+.mainstore-services{
+    background-color: #2F303A
+}
+
+.work-doing{
+    text-align: center;
+}
+
+.team-main{
+    text-align: center;
+}
+
+.mainstore-h1{
+    text-align: center;
+}
+
+.team-practicants-img{
+    width: 270px;
 }
