--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,9 @@
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 15px;
+    display: flexbox;
 
-    outline: 2px dashed red
+    outline: 2px dashed red;
 }
 
 header{
