--- a/css/style.css
+++ b/css/style.css
@@ -539,3 +539,27 @@ header{
 .choose-figure{
     flex-basis: calc((100% - 90px)/3);
 }
+
+.advantages-list-h .first::before{
+    content: '';
+    background-image: url("C:\Users\shava\OneDrive\Desktop\3Work\img\Group 1 (3).png");
+    background-position: cover;
+}
+
+.advantages-list-h .second::before{
+    content: '';
+    background-image: url("C:\Users\shava\OneDrive\Desktop\3Work\img\Group 2 (3).png");
+    background-position: cover;
+}
+
+.advantages-list-h .third::before{
+    content: '';
+    background-image: url("C:\Users\shava\OneDrive\Desktop\3Work\img\Group 3 (3).png");
+    background-position: cover;
+}
+
+.advantages-list-h .fourth::before{
+    content: '';
+    background-image: url("C:\Users\shava\OneDrive\Desktop\3Work\img\Group 4 (1).png");
+    background-position: cover;
+}
