--- a/css/style.css
+++ b/css/style.css
@@ -507,7 +507,7 @@ header{
     justify-content: space-between;
 }
 .choose-figure{
-    border: 1px solid grey;
+    border: 1px solid #E8E5E5;
 }
 
 .choose-figcap{
@@ -566,4 +566,18 @@ header{
     width: 100%;
     height: 120px;
     background-color: gray;
+}
+
+.team-practicants{
+    border-radius: 10px;
+    box-shadow: 0px 3px 1px 0px rgba(181,180,180,1);
+-webkit-box-shadow: 0px 3px 1px 0px rgba(181,180,180,1);
+-moz-box-shadow: 0px 3px 1px 0px rgba(181,180,180,1);
+}
+
+.choose-figure:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 2px 4px 2px rgba(201,201,201,0.75);
+-webkit-box-shadow: 0px 2px 4px 2px rgba(201,201,201,0.75);
+-moz-box-shadow: 0px 2px 4px 2px rgba(201,201,201,0.75);
 }
