--- a/css/style.css
+++ b/css/style.css
@@ -578,3 +578,10 @@ header{
 -webkit-box-shadow: 0px 2px 4px 2px rgba(201,201,201,0.75);
 -moz-box-shadow: 0px 2px 4px 2px rgba(201,201,201,0.75);
 }
+
+.mainstore-services{
+    background: radial-gradient(circle, rgba(0,0,0,0.7539390756302521) 100%, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%), url(/img/img9.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
