--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,7 @@ header{
 }
 
 .mainstore-services{
-    background: radial-gradient(circle, rgba(0,0,0,0.7539390756302521) 100%, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%), url(/img/img9.png);
+    background: radial-gradient(circle, rgba(0,0,0,0.7539390756302521) 100%, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%), url(../img/img9.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
